--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+   
 
     
     <script src="scripts/jquery-3.6.0.min.js" defer></script>
     <script src="scripts/variables.js" defer></script>
-    <script type="text/javascript" src="scripts/functions.js" defer></script>
+    <script src="scripts/functions.js" defer></script>
     <script src="scripts/driver.js" defer></script>
 </head>
 
@@ -29,9 +30,9 @@
             </nav>
         </header>
         <div class="main">  
-            <a href="page3.html"><div class="contact"><p>Barry Allen</p></div></a>
-            <a href="page3.html"><div class="contact"><p>Beverly Crusher</p></div></a>
-            <a href="page3.html"><div class="contact"><p>Diana Prince</p></div></a>
+            <a href="page3.html"><div class="contact"><p>Roberta Dobbs</p></div></a>
+            <a href="page3.html"><div class="contact"><p>Bugs Bunny</p></div></a>
+            <a href="page3.html"><div class="contact"><p>Amakusa Shirou Tokisada</p></div></a>
         </div>
 </body>
 
